# masteroids

./: .gitignore
engine/core/: CMakeLists.txt  app.h  net.h
engine/render/: physics.cc
projects/spacegame/code/: spacegameapp.cc
projects/spacegame_client/: CMakeLists.txt
projects/spacegame_client/code/: spacegameapp.cc  spacegameapp.h  spaceship.cc
projects/spacegame_server/: CMakeLists.txt
projects/spacegame_server/code/: main.cc  sa_server.cc  sa_server.h
